working on keyboard covering fixed input on mobile

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -82,6 +82,10 @@ a {
   font-size: 1.2rem;
 }
 
+.input-group {
+  height: 100%;
+}
+
 .link-row,
 .input-row,
 .submit-row {
@@ -383,6 +387,10 @@ a {
   overflow-y: scroll;
   height: 250px;
 }
+
+/* .panel-footer{
+  height:100%;
+} */
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
